@@ -109,7 +109,7 @@ end procedure
 --    combination
 -- -----------------------------------------
 
-if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_18F4455 | target_chip == PIC_18F2455 | target_chip == PIC_18F6680 | target_chip == PIC_18F6585 | target_chip == PIC_18F8585 | target_chip == PIC_18F8680 | target_chip == PIC_16F870 | target_chip == PIC_16F871 | target_chip == PIC_16F73 | target_chip == PIC_16F74 | target_chip == PIC_16F77 | target_chip == PIC_16F76 | target_chip == PIC_18F4450 | target_chip == PIC_18F2450 | target_chip == PIC_18F66J93 | target_chip == PIC_18F67J93 | target_chip == PIC_18F86J93 | target_chip == PIC_18F87J93 | target_chip == PIC_16F767 | target_chip == PIC_16F737 | target_chip == PIC_16F747 | target_chip == PIC_16F777 | target_chip == PIC_16F72 | target_chip == PIC_16F876A | target_chip == PIC_16F874A | target_chip == PIC_16F877A | target_chip == PIC_16F873A | target_chip == PIC_16F716 | target_chip == PIC_18F4439 | target_chip == PIC_18F4539 | target_chip == PIC_18F2539 | target_chip == PIC_18F2439 | target_chip == PIC_16F873 | target_chip == PIC_16F874 | target_chip == PIC_16F876 | target_chip == PIC_16F877 | target_chip == PIC_16F872 | target_chip == PIC_16F818 | target_chip == PIC_16F819 then
+if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_18F4455 | target_chip == PIC_18F2455 | target_chip == PIC_18F6680 | target_chip == PIC_18F6585 | target_chip == PIC_18F8585 | target_chip == PIC_18F8680 | target_chip == PIC_16F870 | target_chip == PIC_16F871 | target_chip == PIC_16F73 | target_chip == PIC_16F74 | target_chip == PIC_16F77 | target_chip == PIC_16F76 | target_chip == PIC_18F4450 | target_chip == PIC_18F2450 | target_chip == PIC_18F2553 | target_chip == PIC_18F4553 | target_chip == PIC_18F2458 | target_chip == PIC_18F4458 | target_chip == PIC_18F66J93 | target_chip == PIC_18F67J93 | target_chip == PIC_18F86J93 | target_chip == PIC_18F87J93 | target_chip == PIC_16F767 | target_chip == PIC_16F737 | target_chip == PIC_16F747 | target_chip == PIC_16F777 | target_chip == PIC_16F72 | target_chip == PIC_16F876A | target_chip == PIC_16F874A | target_chip == PIC_16F877A | target_chip == PIC_16F873A | target_chip == PIC_16F716 | target_chip == PIC_18F4439 | target_chip == PIC_18F4539 | target_chip == PIC_18F2539 | target_chip == PIC_18F2439 | target_chip == PIC_16F873 | target_chip == PIC_16F874 | target_chip == PIC_16F876 | target_chip == PIC_16F877 | target_chip == PIC_16F872 | target_chip == PIC_16F818 | target_chip == PIC_16F819 then
 
    _debug "ADC channels config: dependent pins, via PCFG bits"
 
@@ -780,6 +780,104 @@ if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_
 
 
 
+   -- Datasheet: 39582B
+   if target_chip == PIC_16F876A | target_chip == PIC_16F873A then
+
+
+
+         -- This array stores PCFG config bits, 3 by 3, for each number of 
+         -- ADC channels, from 1 to the max:
+         -- For each 3-tuple: (no vref, 1 vref, 2 vref)
+         const byte ADC_PCFG_MAP [18] = {0b_0110, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_1111, 0b_0, 0b_0101, 0b_1101, 0b_1001, 0b_1010, 0b_1000}
+         var bit*4 no_vref = 0
+         var bit*4 one_vref = 0
+         var bit*4 two_vref = 0
+
+         if (ADC_NCHANNEL) == 0 then
+            asm nop
+         elsif (ADC_NCHANNEL) == 1 then
+            pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 2 then
+            asm nop
+         elsif (ADC_NCHANNEL) == 3 then
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         elsif (ADC_NCHANNEL) == 4 then
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         elsif (ADC_NCHANNEL) == 5 then
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         end if
+
+   end if
+
+
+   -- Datasheet: 39582B
+   if target_chip == PIC_16F874A | target_chip == PIC_16F877A then
+
+
+
+         -- This array stores PCFG config bits, 3 by 3, for each number of 
+         -- ADC channels, from 1 to the max:
+         -- For each 3-tuple: (no vref, 1 vref, 2 vref)
+         const byte ADC_PCFG_MAP [27] = {0b_0110, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_1111, 0b_0, 0b_0101, 0b_1101, 0b_0010, 0b_0011, 0b_1100, 0b_1001, 0b_1010, 0b_1011, 0b_0, 0b_0, 0b_0, 0b_0000, 0b_0001, 0b_1000}
+         var bit*4 no_vref = 0
+         var bit*4 one_vref = 0
+         var bit*4 two_vref = 0
+
+         if (ADC_NCHANNEL) == 0 then
+            asm nop
+         elsif (ADC_NCHANNEL) == 1 then
+            pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 2 then
+            asm nop
+         elsif (ADC_NCHANNEL) == 3 then
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         elsif (ADC_NCHANNEL) == 4 then
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         elsif (ADC_NCHANNEL) == 5 then
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         elsif (ADC_NCHANNEL) == 6 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN5_direction = input
+         elsif (ADC_NCHANNEL) == 7 then
+            asm nop
+         elsif (ADC_NCHANNEL) == 8 then
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
+            pin_AN0_direction = input
+            pin_AN5_direction = input
+            pin_AN2_direction = input
+            pin_AN3_direction = input
+         end if
+
+   end if
+
+
+
+
    -- Datasheet: 39948A
    if target_chip == PIC_18F66J93 | target_chip == PIC_18F67J93 | target_chip == PIC_18F86J93 | target_chip == PIC_18F87J93 then
 
@@ -1266,15 +1364,15 @@ if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_
 
 
 
-   -- Datasheet: 39582B
-   if target_chip == PIC_16F876A | target_chip == PIC_16F873A then
+   -- Datasheet: 39887B
+   if target_chip == PIC_18F2553 | target_chip == PIC_18F2458 then
 
 
 
          -- This array stores PCFG config bits, 3 by 3, for each number of 
          -- ADC channels, from 1 to the max:
          -- For each 3-tuple: (no vref, 1 vref, 2 vref)
-         const byte ADC_PCFG_MAP [18] = {0b_0110, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_1111, 0b_0, 0b_0101, 0b_1101, 0b_1001, 0b_1010, 0b_1000}
+         const byte ADC_PCFG_MAP [33] = {0b_1111, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_1101, 0b_0, 0b_0, 0b_1100, 0b_0, 0b_0, 0b_1011, 0b_0, 0b_0, 0b_1000, 0b_0, 0b_0, 0b_0110, 0b_0, 0b_0, 0b_0101, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_0, 0b_0011, 0b_0, 0b_0, 0b_0000, 0b_0, 0b_0}
          var bit*4 no_vref = 0
          var bit*4 one_vref = 0
          var bit*4 two_vref = 0
@@ -1284,36 +1382,82 @@ if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_
          elsif (ADC_NCHANNEL) == 1 then
             pin_AN0_direction = input
          elsif (ADC_NCHANNEL) == 2 then
-            asm nop
-         elsif (ADC_NCHANNEL) == 3 then
-            pin_AN0_direction = input
-            pin_AN2_direction = input
-            pin_AN3_direction = input
-         elsif (ADC_NCHANNEL) == 4 then
             pin_AN1_direction = input
             pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 3 then
             pin_AN2_direction = input
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 4 then
+            pin_AN2_direction = input
+            pin_AN1_direction = input
             pin_AN3_direction = input
+            pin_AN0_direction = input
          elsif (ADC_NCHANNEL) == 5 then
+            pin_AN2_direction = input
             pin_AN4_direction = input
             pin_AN1_direction = input
-            pin_AN0_direction = input
-            pin_AN2_direction = input
             pin_AN3_direction = input
+            pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 6 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 7 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 8 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 9 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN11_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 10 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN11_direction = input
+            pin_AN1_direction = input
+            pin_AN3_direction = input
+            pin_AN12_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN8_direction = input
          end if
 
    end if
 
 
-   -- Datasheet: 39582B
-   if target_chip == PIC_16F874A | target_chip == PIC_16F877A then
+   -- Datasheet: 39887B
+   if target_chip == PIC_18F4553 | target_chip == PIC_18F4458 then
 
 
 
          -- This array stores PCFG config bits, 3 by 3, for each number of 
          -- ADC channels, from 1 to the max:
          -- For each 3-tuple: (no vref, 1 vref, 2 vref)
-         const byte ADC_PCFG_MAP [27] = {0b_0110, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_1111, 0b_0, 0b_0101, 0b_1101, 0b_0010, 0b_0011, 0b_1100, 0b_1001, 0b_1010, 0b_1011, 0b_0, 0b_0, 0b_0, 0b_0000, 0b_0001, 0b_1000}
+         const byte ADC_PCFG_MAP [42] = {0b_1111, 0b_0, 0b_0, 0b_1110, 0b_0, 0b_0, 0b_1101, 0b_0, 0b_0, 0b_1100, 0b_0, 0b_0, 0b_1011, 0b_0, 0b_0, 0b_1010, 0b_0, 0b_0, 0b_1001, 0b_0, 0b_0, 0b_1000, 0b_0, 0b_0, 0b_0111, 0b_0, 0b_0, 0b_0110, 0b_0, 0b_0, 0b_0101, 0b_0, 0b_0, 0b_0100, 0b_0, 0b_0, 0b_0011, 0b_0, 0b_0, 0b_0000, 0b_0, 0b_0}
          var bit*4 no_vref = 0
          var bit*4 one_vref = 0
          var bit*4 two_vref = 0
@@ -1323,22 +1467,23 @@ if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_
          elsif (ADC_NCHANNEL) == 1 then
             pin_AN0_direction = input
          elsif (ADC_NCHANNEL) == 2 then
-            asm nop
-         elsif (ADC_NCHANNEL) == 3 then
-            pin_AN0_direction = input
-            pin_AN2_direction = input
-            pin_AN3_direction = input
-         elsif (ADC_NCHANNEL) == 4 then
             pin_AN1_direction = input
             pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 3 then
             pin_AN2_direction = input
+            pin_AN1_direction = input
+            pin_AN0_direction = input
+         elsif (ADC_NCHANNEL) == 4 then
+            pin_AN2_direction = input
+            pin_AN1_direction = input
             pin_AN3_direction = input
+            pin_AN0_direction = input
          elsif (ADC_NCHANNEL) == 5 then
+            pin_AN2_direction = input
             pin_AN4_direction = input
             pin_AN1_direction = input
-            pin_AN0_direction = input
-            pin_AN2_direction = input
             pin_AN3_direction = input
+            pin_AN0_direction = input
          elsif (ADC_NCHANNEL) == 6 then
             pin_AN2_direction = input
             pin_AN4_direction = input
@@ -1347,16 +1492,82 @@ if target_chip == PIC_18F2550 | target_chip == PIC_18F4550 | target_chip == PIC_
             pin_AN0_direction = input
             pin_AN5_direction = input
          elsif (ADC_NCHANNEL) == 7 then
-            asm nop
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN6_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN5_direction = input
          elsif (ADC_NCHANNEL) == 8 then
+            pin_AN2_direction = input
             pin_AN4_direction = input
             pin_AN1_direction = input
             pin_AN7_direction = input
             pin_AN6_direction = input
+            pin_AN3_direction = input
             pin_AN0_direction = input
             pin_AN5_direction = input
+         elsif (ADC_NCHANNEL) == 9 then
             pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
             pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN5_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 10 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN5_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 11 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN5_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 12 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN11_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
+            pin_AN3_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN5_direction = input
+            pin_AN8_direction = input
+         elsif (ADC_NCHANNEL) == 13 then
+            pin_AN2_direction = input
+            pin_AN4_direction = input
+            pin_AN10_direction = input
+            pin_AN11_direction = input
+            pin_AN1_direction = input
+            pin_AN7_direction = input
+            pin_AN6_direction = input
+            pin_AN3_direction = input
+            pin_AN12_direction = input
+            pin_AN0_direction = input
+            pin_AN9_direction = input
+            pin_AN5_direction = input
+            pin_AN8_direction = input
          end if
 
    end if
